# python_labs

./: .coverage  README.md  pyproject.toml
data/: people_from_csv2.xlsx
data/lab_08/: students_input.json  students_output.json
data/lab_09/: students.csv  students_p.csv  students_test.csv
data/samples/: people.csv  people.json
src/data/: check.csv  check_2.csv  check_empty.csv  input.txt  input_2.txt
src/data/lab_05/: people.xlsx  people_from_csv2.xlsx
src/lab01/: 01_greeting.py  02_greeting.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  README.md
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text.py  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  main.py  models.py  serialize.py
src/lab09/: README.md  group.py  main.py
src/lab10/: README.md  linked_list.py  main.py  structures.py
src/lib/: analyze_text.py  text.py  text_3.py
tests/: test_json_csv.py  test_lab08.py  test_text.py
