[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "2025.0.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6"
]

dependencies = [
  "requests>=2.32",
  "pandas>=2.2"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/csv_xlsx.py",
    "*/cli_convert.py",
    "*/cli_text.py",
    "*/analyze_text.py",
    "*/text_stats.py",
    "*/lab03/text.py",
    "*/io_text_csv.py",
    "*/text_report.py",
    "*/tuples.py",
    "*/stats.py",
    "*/__init__.py"
]